# blasfeo

./: .gitignore  CMakeLists.txt  Makefile  Makefile.rule
blas_api/: Makefile  dgemm.c
examples/: example_d_riccati_recursion.c
include/: blasfeo_target.h
sandbox/: kernel.h  kernel_avx2.S  test_sandbox.c
